# test-cpp

./: CMakeLists.txt  README.md
CleanTest/: CMakeLists.txt
CleanTest/src/: clean_test.cpp
CleanTests/: CMakeLists.txt
CleanTests/src/: clean_tests.cpp
RandomTests/: CMakeLists.txt
RandomTests/src/: random_tests.cpp
TestAssertions/: CMakeLists.txt
TestAssertions/src/: assertions_test.cpp  static_assertions_test.cpp
TestAuto/: CMakeLists.txt
TestAuto/src/: auto_test.cpp  trailing_return_type_test.cpp
TestBits/: CMakeLists.txt
TestBits/src/: bits_example.cpp
TestCastOperators/: CMakeLists.txt
TestCastOperators/src/: const_cast_example.cpp  dynamic_cast_example.cpp  reinterpret_cast_example.cpp  static_cast_example.cpp
TestChars/: CMakeLists.txt
TestChars/src/: chars_test.cpp
TestConst/: CMakeLists.txt
TestConst/src/: const_example.cpp
TestConstexpr/: CMakeLists.txt
TestConstexpr/src/: constexpr_test.cpp
TestConstructors/: CMakeLists.txt
TestConstructors/src/: test_constructors.cpp
TestCpp/: CMakeLists.txt
TestCpp/docs/: Doxyfile.in
TestCpp/include/: TestCpp.hpp
TestCpp/src/: TestCpp.cpp  main.cpp
TestEnum/: CMakeLists.txt
TestEnum/src/: enum_class_test.cpp  enum_test.cpp
TestExceptions/: CMakeLists.txt
TestExceptions/src/: exceptions_example.cpp
TestExplicit/: CMakeLists.txt
TestExplicit/src/: explicit_example.cpp
TestExtern/: CMakeLists.txt
TestExtern/src/: file_1.cpp  file_2.cpp
TestExtern/test1/: CMakeLists.txt
TestExtern/test1/src/: file_2.cpp
TestExtern/test2/: CMakeLists.txt
TestExtern/test2/include/: header.hpp
TestExtern/test2/src/: main.cpp  module.cpp
TestFriend/: CMakeLists.txt
TestFriend/src/: friend_example.cpp
TestFunctionAndBind/: CMakeLists.txt
TestFunctionAndBind/src/: function_and_bind_in_a_class_test.cpp  function_and_bind_test.cpp
TestFunctionPtr/: CMakeLists.txt
TestFunctionPtr/src/: function_ptr_example.cpp
TestFunctor/: CMakeLists.txt
TestFunctor/src/: example_functor.cpp  example_std_functors.cpp  example_std_functors_with_stl.cpp
TestGDB/: CMakeLists.txt
TestGDB/test_1/: CMakeLists.txt  README.md
TestGDB/test_1/src/: test_gdb_1  test_gdb_1.cpp
TestGDB/test_2/: CMakeLists.txt  README.md
TestGDB/test_2/src/: test_gdb_2.cpp
TestGDB/test_3/: CMakeLists.txt
TestGDB/test_3/src/: threading_class_example.cpp
TestInheritance/: CMakeLists.txt
TestInheritance/src/: inheritance_checker.cpp  inheritance_example.cpp  inheritance_example_2.cpp  multiinheritance_example.cpp
TestInitializerList/: CMakeLists.txt
TestInitializerList/src/: init_list_test.cpp
TestLambda/: CMakeLists.txt
TestLambda/src/: lambda_example.cpp  lambda_example_1.cpp  lambda_example_2.cpp
TestMix/: CMakeLists.txt
TestMix/src/: random_tests.cpp
TestMutable/: CMakeLists.txt
TestMutable/src/: mutable_test.cpp
TestOperands/: CMakeLists.txt
TestOperands/src/: operands_example.cpp
TestOperatorsOverload/: CMakeLists.txt
TestOperatorsOverload/src/: operators_overload_test.cpp
TestQt5/: CMakeLists.txt
TestQt5/Example1/: CMakeLists.txt
TestQt5/Example1/src/: test_qt5.cpp
TestQt5/Example2/: CMakeLists.txt
TestQt5/Example2/include/: mainwindow.h
TestQt5/Example2/src/: mainwindow.cpp  test_qt5.cpp
TestReferences/: CMakeLists.txt
TestReferences/src/: references_example.cpp
TestSmartPointers/: CMakeLists.txt
TestSmartPointers/src/: shared_and_weak_example.cpp  smart_pointers_example.cpp
TestStatic/: CMakeLists.txt
TestStatic/src/: static_example.cpp
TestStatic2/: CMakeLists.txt
TestStatic2/include/: Class.hpp
TestStatic2/src/: Class.cpp  main.cpp
TestStdAsync/: CMakeLists.txt
TestStdAsync/src/: async_test.cpp
TestStdUnique/: CMakeLists.txt
TestStdUnique/src/: std_unique_test.cpp
TestTemplates/: CMakeLists.txt
TestTemplates/src/: templates_example.cpp  variable_templates_example.cpp
TestThread/: CMakeLists.txt
TestThread/src/: threads_and_mutex_example.cpp
TestThreads/: CMakeLists.txt
TestThreads/include/: ThreadingClass.hpp
TestThreads/src/: ThreadingClass.cpp
TestTypedef/: CMakeLists.txt
TestTypedef/src/: typedef_test.cpp
TestVirtual/: CMakeLists.txt
TestVirtual/src/: pure_virtual_example.cpp  pure_virtual_usage_example.cpp  virtual_example.cpp
TestVirtualBaseClass/: CMakeLists.txt
TestVirtualBaseClass/src/: virtual_base_class_example.cpp
TestVolatile/: CMakeLists.txt
TestVolatile/src/: volatile_example.cpp
include/: TestCpp.hpp
src/: TestCpp.cpp  main.cpp
