cmake_minimum_required(VERSION 2.8.12)
project(test-cpp)

#########
# BUILD
#########
add_subdirectory(TestConst)
add_subdirectory(TestCpp)
add_subdirectory(TestExceptions)
add_subdirectory(TestExtern)
add_subdirectory(TestFriend)
add_subdirectory(TestFunctionAndBind)
add_subdirectory(TestFunctionPtr)
add_subdirectory(TestInheritance)
add_subdirectory(TestMix)
add_subdirectory(TestOperands)
add_subdirectory(TestQt5)
add_subdirectory(TestReferences)
add_subdirectory(TestSmartPointers)
add_subdirectory(TestStatic)
add_subdirectory(TestTemplates)
add_subdirectory(TestThreads)
add_subdirectory(TestTypedef)
add_subdirectory(TestVirtual)
add_subdirectory(TestVolatile)